<resources>
    <string name="app_name">SCORE IT</string>
    <string name="nombre_campeonato">Nombre del Campeonato</string>
    <string name="menu_pricipal_text">Menú principal</string>
    <string name="ver_campenatos_creados">Ver campenatos creados</string>
    <string name="crear_un_nuevo_campeonato">Nuevo campeonato</string>
    <string name="pasar_a_la_pantalla_de_usuario">Pasar a la pantalla de usuario\n</string>
    <string name="Icono_la_app">Icono de la app\n</string>
    <string name="anade_un_logo">Añade un logo</string>
    <string name="anadir_el_logo_boton">+</string>
    <string name="fecha_del_campeonato">Fecha del campeonato\n</string>


    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contraseña">Ingresar Contraseña</string>
    <string name="repita_contraseña">Confirmar Contraseña</string>
    <string name="iniciar_sesión">Iniciar Sesión</string>
    <string name="marcador_inicial">0</string>
    <string name="siempre_un_ganador">Siempre un ganador</string>
    <string name="diferencia_de_dos_puntos">Diferencia de dos puntos</string>
    <string name="ida_y_vuelta">Ida y Vuelta</string>
    <string name="se_quiere_tiempo">Se quiere tiempo</string>
    <string name="se_quiere_el_puntaje">Se quiere el puntaje</string>
    <string name="cantidad_de_tiempo">Tiempo</string>
    <string name="puntaje_del_campeonato_text">Puntaje</string>
    <string name="tiempos_de_descanso_text">Tiempos de descanso</string>
    <string name="rondas_text">Canchas/Rondas</string>
    <string name="diferencia_de_dos_rondas_text">Diferencia de \ndos rondas</string>
    <string name="cantidad_de_descansos_edit_text">Cantidad de descansos</string>
    <string name="tiempo_de_descansos_edit_text">Tiempo</string>
    <string name="cantidad_de_rondas_edit_text">Rondas para ganar:</string>
    <string name="jan_01_2020">JAN 01 2020</string>
    <string name="guardar">Guardar</string>
    <string name="cantidad_para_ganar_text">Cantidad de rondas para ganar:</string>
    <string name="atras_boton"><![CDATA[< Atrás]]></string>
    <string name="minutos_text">Minutos:</string>
    <string name="seleccionar_los_minutos">Seleccionar los minutos</string>
    <string name="seleccionar_la_cantidad_de_descasos">Seleccionar la cantidad de Descasos</string>
    <string name="cantidad_de_rondas_para_ganar">Cantidad de rondas para ganar</string>
    <string name="campeonatos_creados_por">Campeonatos creados por:</string>

    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="crear_cuenta">Crear Cuenta</string>

    <string name="partidos">Partidos:</string>
    <string name="numero_de_equipos">Número de equipos</string>
    <string name="configura_tus_equipos">Configura tus equipos</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="tabla_de_posiciones">Tabla de Posiciones</string>
    <string name="jornada">Jornada</string>
    <string name="tiempo">Tiempo:</string>
    <string name="puntos">Puntos:</string>
    <string name="descanso">Descanso</string>
    <string name="finalizar">Finalizar</string>
    <string name="suspender">Suspender</string>
    <string name="timer">00:00:00</string>
    <string name="doble_partido">Doble partido:</string>
    <string name="por_rondas">Por rondas:</string>
    <string name="siempre_ganador">Siempre ganador:</string>
    <string name="fecha">Fecha:</string>
    <string name="modo_de_juego">Modo:</string>
    <string name="equipo">Equipo</string>
    <string name="pts">Pts</string>
    <string name="pts_int">Pts Int</string>
    <string name="pj">PJ</string>
    <string name="pg">PG</string>

    <string-array name="opciones_para_modo_de_juego">
        <item>Round Robin</item>
        <item>Llaves</item>
    </string-array>
</resources>