<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".ActivityDentroDelCampeonato"
    style="@style/Background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <include layout="@layout/encabezado"/>

    <TextView
        android:id="@+id/nombre_dentro_del_campeonato"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/encabezado_principal_rojo"
        android:background="@color/DarkRed"
        android:text=""
        android:gravity="center"
        style="@style/TextoIndicadorDePantalla"
        />

    <TextView
        android:id="@+id/modo_de_juego_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modo_de_juego"
        app:layout_constraintTop_toBottomOf="@id/nombre_dentro_del_campeonato"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:maxLines="2"
        style="@style/TextoPequeno"
        />

    <TextView
        android:id="@+id/doble_partido_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doble_partido"
        app:layout_constraintTop_toBottomOf="@id/modo_de_juego_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:maxLines="2"
        style="@style/TextoPequeno"
        />

    <TextView
        android:id="@+id/por_rondas_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/por_rondas"
        app:layout_constraintTop_toBottomOf="@id/doble_partido_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:maxLines="2"
        style="@style/TextoPequeno"
        />

    <TextView
        android:id="@+id/siempre_un_ganador_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siempre_ganador"
        app:layout_constraintTop_toBottomOf="@id/por_rondas_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:maxLines="2"
        style="@style/TextoPequeno"
        />

    <TextView
        android:id="@+id/tiempo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo"
        app:layout_constraintTop_toBottomOf="@id/nombre_dentro_del_campeonato"
        app:layout_constraintStart_toStartOf="@id/guideline_mitad_horizontal"
        android:layout_margin="10dp"
        android:maxLines="2"
        style="@style/TextoPequeno"
        />

    <TextView
        android:id="@+id/puntos_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntos"
        app:layout_constraintTop_toBottomOf="@id/tiempo_text"
        app:layout_constraintStart_toStartOf="@id/guideline_mitad_horizontal"
        android:layout_margin="10dp"
        android:maxLines="2"
        style="@style/TextoPequeno"
        />

    <TextView
        android:id="@+id/fecha_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        app:layout_constraintTop_toBottomOf="@id/puntos_text"
        app:layout_constraintStart_toStartOf="@id/guideline_mitad_horizontal"
        android:layout_margin="10dp"
        android:maxLines="2"
        style="@style/TextoPequeno"
        />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTablaDePosiciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintTop_toBottomOf="@id/nombre_equipo_tabla"
        />

    <TextView
        android:id="@+id/partidos_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partidos"
        app:layout_constraintTop_toBottomOf="@id/recyclerTablaDePosiciones"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:maxLines="2"
        style="@style/TextoNormal"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPartidosCreados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintTop_toBottomOf="@id/partidos_text"
        app:layout_constraintBottom_toTopOf="@id/boton_atras"
        android:layout_marginTop="20dp"
        />

    <android.widget.Button
        android:id="@+id/boton_atras"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fondo_para_botones_score_it"
        android:text="@string/atras_boton"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextoNormal"
        />

    <TextView
        android:id="@+id/nombre_equipo_tabla"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/equipo"
        android:background="@color/CommonRed"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha_4"
        app:layout_constraintTop_toBottomOf="@id/siempre_un_ganador_text"
        android:layout_marginTop="20dp"
        style="@style/TextoTabla"
        />

    <TextView
        android:id="@+id/puntos_finales_tabla"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/pts"
        android:background="@color/CommonRed"
        app:layout_constraintTop_toBottomOf="@id/siempre_un_ganador_text"
        app:layout_constraintStart_toEndOf="@+id/nombre_equipo_tabla"
        app:layout_constraintEnd_toStartOf="@id/guideline_margen_derecha_3"
        android:layout_marginTop="20dp"
        style="@style/TextoTabla"
        />

    <TextView
        android:id="@+id/puntos_in_game_tabla"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/pts_int"
        android:background="@color/CommonRed"
        app:layout_constraintTop_toBottomOf="@id/siempre_un_ganador_text"
        app:layout_constraintStart_toEndOf="@+id/puntos_finales_tabla"
        app:layout_constraintEnd_toStartOf="@id/guideline_margen_derecha_2"
        android:layout_marginTop="20dp"
        style="@style/TextoTabla"
        />

    <TextView
        android:id="@+id/partidos_jugados_tabla"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/pj"
        android:background="@color/CommonRed"
        app:layout_constraintTop_toBottomOf="@id/siempre_un_ganador_text"
        app:layout_constraintStart_toEndOf="@+id/puntos_in_game_tabla"
        app:layout_constraintEnd_toStartOf="@id/guideline_margen_derecha_1"
        android:layout_marginTop="20dp"
        style="@style/TextoTabla"
        />

    <TextView
        android:id="@+id/partidos_ganados_tabla"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/pg"
        android:background="@color/CommonRed"
        app:layout_constraintTop_toBottomOf="@id/siempre_un_ganador_text"
        app:layout_constraintStart_toEndOf="@+id/partidos_jugados_tabla"
        app:layout_constraintEnd_toStartOf="@id/guideline_margen_derecha"
        android:layout_marginTop="20dp"
        style="@style/TextoTabla"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_izquierda"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_derecha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_derecha_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.83"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_derecha_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_derecha_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_derecha_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.41"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mitad_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>