<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMenuPrincipal"
    android:background="@color/Black">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/encabezado_principal_rojo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/RojoEncabezadoScoreIt"
        android:text="@string/app_name"
        style="@style/TituloDeLaApp"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/copa_score_it"
        android:layout_width="60dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="@+id/encabezado_principal_rojo"
        app:layout_constraintStart_toStartOf="@+id/encabezado_principal_rojo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/score_it_coup"
        android:elevation="2dp"
        android:contentDescription="@string/Icono_la_app"
        />
    <android.widget.Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="@+id/encabezado_principal_rojo"
        app:layout_constraintEnd_toEndOf="@+id/encabezado_principal_rojo"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/user_iconn"
        android:backgroundTint="@color/White"
        android:contentDescription="@string/pasar_a_la_pantalla_de_usuario"
        />


    <android.widget.Button
        android:id="@+id/boton_crear_nuevo_campeonato"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@+id/encabezado_principal_rojo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/crear_un_nuevo_campeonato"
        style="@style/BotonesScoreItStyle"
        android:background="@drawable/fondo_para_botones_score_it"
        />

    <ScrollView
        android:id="@+id/mostrar_campeonatos_creados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/boton_crear_nuevo_campeonato"
        android:layout_marginTop="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>